<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/vertical_margin">

        <LinearLayout
            android:id="@+id/linear_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/img_movies_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/image_horizontal_margin"
                android:paddingLeft="@dimen/image_horizontal_margin"
                android:paddingRight="@dimen/image_horizontal_margin"
                android:paddingTop="@dimen/image_vertical_margin"
                android:src="@mipmap/ic_wallpaper" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_repo_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/linear_repo"
            android:orientation="vertical"
            android:paddingTop="@dimen/image_vertical_margin">

            <TextView
                android:id="@+id/txt_movies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/font_size_title"
                />

            <TextView
                android:id="@+id/txt_movies_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_secondary"
                android:textColor="@color/colorSecondaryText"
                android:layout_below="@+id/txt_repo_nome_repo"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_metacritic"/>

                <TextView
                    android:id="@+id/txt_movies_metacritic_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="@dimen/image_horizontal_margin"
                     />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_idmb"/>

                <TextView
                    android:id="@+id/txt_movies_imdb_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/spacing_medium"
                     />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>

